add veiw home page

--- a/room-view.html
+++ b/room-view.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instructor View</title>
     <link rel="stylesheet" href="styles/view-instructor.css">
-    <script src="scripts/sidebar-toggle.js" defer></script>
+    <title>Document</title>
 </head>
 <body>
+     <!-- Sidebar -->
+<div class="sidebar">
+    <h2>Admin Panel</h2>
+    <div class="elem-inside">
+    <ul>
+        <li><a onclick="location.href='dashboard.php'">Dashboard</a></li>
+        <li><a onclick="location.href='add_room.php'">Add Room</a></li>
+        <li><a onclick="location.href='manage_rooms.php'">Manage Rooms</a></li>
+        <li><a href="#">My Account</a></li>
+        <li><a href="#">Settings</a></li>
+        <li><a href="#">Logout</a></li>
+    </ul>
+    </div>
+</div>
+
     <!-- Sidebar Section -->
     <div class="sidebar">
         <div class="profile">
@@ -30,8 +44,7 @@
             </ul>
         </nav>
     </div>
-
-<!-- Main Content Section -->
+    <!-- Main Content Section -->
 <div class="parent">
     <!-- Room 1 -->
     <div class="room">
@@ -153,21 +166,18 @@
         <button class="view-details-btn" onclick="window.location.href='room_details.php?room_id=115'">View More Details</button>
     </div>
 </div>
-
-            <!-- Map Section -->
-            <div class="map-container">
-                <h2>College Map</h2>
-                <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3876.1008081624653!2d50.51035831527856!3d26.047947889870854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e49f5f78c4e8597%3A0x58cd2cb91f59d49a!2z2KfYr9mF2YHZiNmK2LfYr9mK2KkgQ29sbGVnZSBvZiBJbmZvcm1hdGlvbiBUZWNobm9sb2d5IC0gU2FraGlyIFNhY2FyaXMgQ2FtcHVz!5e0!3m2!1sen!2sus!4v1713940198768!5m2!1sen!2sus"
-                    width="100%" 
-                    height="400" 
-                    style="border:0;" 
-                    allowfullscreen="" 
-                    loading="lazy" 
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
-            </div>
-        </div>
-    </div>
+<!-- Map Section -->
+<div class="map-container">
+    <h2>College Map</h2>
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3876.1008081624653!2d50.51035831527856!3d26.047947889870854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e49f5f78c4e8597%3A0x58cd2cb91f59d49a!2z2KfYr9mF2YHZiNmK2LfYr9mK2KkgQ29sbGVnZSBvZiBJbmZvcm1hdGlvbiBUZWNobm9sb2d5IC0gU2FraGlyIFNhY2FyaXMgQ2FtcHVz!5e0!3m2!1sen!2sus!4v1713940198768!5m2!1sen!2sus"
+        width="100%" 
+        height="400" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+</div>
 </body>
 </html>
